# PicPocket

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
docs/: conf.py  index.rst  why.rst
docs/api/: cli.rst  index.rst  python.rst  web.rst
docs/development/: backends.rst  index.rst  testing.rst
docs/usage/: images.rst  installation.rst  locations.rst  quickstart.rst  tags.rst  tasks.rst
picpocket/: __init__.py  api.py  cli.py  configuration.py  errors.py  images.py  internal_use.py  parsing.py  tasks.py  version.py
picpocket/database/: dbapi.py  logic.py  postgres.py  postgres_schema.sql  postgres_types.sql  sqlite.py  sqlite_schema.sql  types.py
picpocket/web/: __init__.py  colors.py
picpocket/web/scripts/: dialog.applescript
picpocket/web/templates/: add-location.html  check-only.html  edit-image.html  error.html  find-image.html  form.html  image.html  index.html  location.html  locations.html  mount-location.html  move-image.html  move-tag.html  scripts.js  search.html  style.css  tag.html  tags.html  task.html  tasks.html  upload-image.html  verify-images.html
picpocket/web/templates/modules/: image.html  location.html  navbar.html  tags.html  task.html
requirements/: formatting.txt  tests.txt
tests/: conftest.py  pg-conf.py  server.py  teardown.py  test_api.py  test_base.py  test_cli.py  test_configuration.py  test_database_types.py  test_images.py  test_logic.py  test_postgres.py  test_sqlite.py  test_tasks.py  test_version.py  test_web.py
